--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
     agent {
       node {
         // TODO: run this simple pipeline on jenkins 'master' node
+        label 'master'
       }
     }
 
@@ -22,6 +23,16 @@ pipeline {
                 }
             }
         }
+	stage('stage2'){
+
+		steps{
+			timeout(time:60, unit:'MINUTES'){
+			input message:"Move to stage 3?"}
+				
+		      }
+		}
+           
+
 
         // TODO: ADD A STAGE THAT SAYS HELLO
 
